 * Removed the abort/redo of tasks when mood swings lower the active
   limit. This probably hurts the server more than it helps. Some
   setup, like proxied connections, can be slow to respond to the
   abort of a connection.

v1.15.22
--------------------------------------------------------------------------------
 * Added a timeout to h2 worker cleanup to exit latest after 5 seconds of
   waiting on idle workers to terminate. This happens after all connections
   have been processed. a WARNING is logged in case workers lagged behind.
   This is a stopgap to an underlying issue introduced by the recent
   dynamic worker changes.
 * H2 sessions normally log a warning when the connection is torn down
   without them being able to send a last GOAWAY frame. This logging
   happens at DEBUG level during the stopping of a child process.
 * `configure` now checks for `apache2ctl` if `apachectl` was not found.
 * `configure` now longer errors when no apachectl was found but warns
   that the test suite will not work.
 * The test suite now clears Apache's error log on start and checks after
   the run if unexpected errors or warnings were logged.

v1.15.21
--------------------------------------------------------------------------------
 * Making h2 connection "mood swings" to ignore clients resetting
   requests which have at least produced the response headers and
   one DATA chunk. This targets long-running requests like
   websockets and server-side-events (SSE), where a RST_STREAM
   ius the cleint's only option of terminating such requests.
   With this change, clients are no longer punished for it.
   See also: <https://bz.apache.org/bugzilla/show_bug.cgi?id=65402>
   (background: "mood swings" influence how many resources are
   available to a connection, e.g. how many h2 workers may be
   working for it at a given point in time.)
 * Making H2Min/MaxWorkers behave as intended again. The module will initially